# CloneOps

./: .gitignore  README.md  test_auth.js
api/: Cargo.toml  build.rs
api/migrations/: 0001_init_db.sql
api/src/: agents.rs  auth.rs  entities.rs  error.rs  events.rs  lib.rs  main.rs  messaging.rs  posts.rs  state.rs  users.rs  utoipa_compat.rs
client/: Api.ts  generate-bindings.sh  package-lock.json  vite-env.d.ts
client/app/: globals.css  layout.tsx  page.tsx
client/app/agents/: page.tsx
client/app/dashboard/: page.tsx
client/app/messages/: page.tsx
client/app/profile/: page.tsx
client/app/security/: page.tsx
client/app/social/: page.tsx
client/app/tools/: page.tsx
client/components/: access-controls.tsx  activity-feed.tsx  agent-list.tsx  agent-overview.tsx  agent-templates.tsx  audit-log.tsx  auto-response-settings.tsx  caption-generator.tsx  content-research.tsx  conversation-view.tsx  create-agent-dialog.tsx  dashboard-header.tsx  dashboard-nav.tsx  emergency-controls.tsx  engagement-panel.tsx  follower-simulator.tsx  hashtag-suggestions.tsx  image-analyzer.tsx  login-form.tsx  message-filters.tsx  message-inbox.tsx  message-stats.tsx  post-composer.tsx  post-history.tsx  protected-route.tsx  providers.tsx  quick-actions.tsx  realtime-event-handler.tsx  security-overview.tsx  session-provider.tsx  social-feed.tsx  system-status.tsx  user-profile.tsx
client/hooks/: use-auth.ts
client/lib/: api.ts
