[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "multipart"] }
dirs = "6.0.0"
rig-core = "0.20.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite"] }
tokio = { version = "1.47.1", features = ["full"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
