[package]
name = "cloneops-api"
version = "0.1.0"
edition = "2024"

[build-dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros", "sqlite"] }
tokio = { version = "1.40.0", features = ["macros"] }
dotenvy = "0.15.7"
dirs = "6.0.0"
url = "2.5.4"
color-eyre = "0.6"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "multipart"] }
bcrypt = "0.15.1"
color-eyre = "0.6.5"
dirs = "6.0.0"
rig-core = "0.20.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite", "uuid"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
tower-http = { version = "0.6.2", features = ["trace", "fs", "cors", "compression-br", "compression-gzip", "compression-zstd", "sensitive-headers", "util", "timeout", "set-header"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
url = "2.5.7"
utoipa-axum = "0.2.0"
thiserror = "2.0.16"
regex = "1.11.3"
lazy-regex = "3.4.1"
chrono = { version = "0.4.42", features = ["serde"] }
